# BSI_LAB10

./: README.md  WebS.py  main.py
WebS/: WebS.py
WebSocket_Client_Server/: aes.py  client.js  client.py  index.html  pyproject.toml  requirements.txt  server.py  utils.py
