[tool.poetry]
name = "websocket_client_server"
version = "0.1.0"
description = "Using websockets in python to create simple client&server application with secure connection for communication."
authors = ["Maciej Milewski and Michał Degowski"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
